Update the name Oskendal

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 22ed5a81c7c3498835385ce265a3af6dff714176
+% Commit: 3c2549383d68cd3a22f99b835f4646800ea1ab19
 % Date: 2023-06-21
 % ---------------------------
 
@@ -25,158 +25,6 @@
 % 
 % ---------------------------
 
-
-@Article{	  .proske.ea:05:backward,
-  author	= {\O ksendal, Bernt and Proske, Frank and Zhang, Tusheng},
-  title		= {Backward stochastic partial differential equations with
-		  jumps and application to optimal control of random jump
-		  fields},
-  journal	= {Stochastics},
-  fjournal	= {Stochastics. An International Journal of Probability and
-		  Stochastic Processes},
-  volume	= {77},
-  year		= {2005},
-  number	= {5},
-  pages		= {381--399},
-  issn		= {1744-2508},
-  mrclass	= {60H15 (35R60 93E20)},
-  mrnumber	= {2178424},
-  mrreviewer	= {Krystyna Twardowska},
-  doi		= {10.1080/17442500500213797},
-  url		= {https://doi.org/10.1080/17442500500213797}
-}
-
-@Article{	  .sulem.ea:11:optimal,
-  author	= {\O ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
-  title		= {Optimal control of stochastic delay equations and
-		  time-advanced backward stochastic differential equations},
-  journal	= {Adv. in Appl. Probab.},
-  fjournal	= {Advances in Applied Probability},
-  volume	= {43},
-  year		= {2011},
-  number	= {2},
-  pages		= {572--596},
-  issn		= {0001-8678},
-  mrclass	= {49K45 (35R60 60H10 60H15 60J75 91G80)},
-  mrnumber	= {2848391},
-  mrreviewer	= {Giorgio Fabbri},
-  doi		= {10.1239/aap/1308662493},
-  url		= {https://doi.org/10.1239/aap/1308662493}
-}
-
-@InCollection{	  .sulem.ea:12:optimal,
-  author	= {\O ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
-  title		= {Optimal partial information control of {SPDE}s with delay
-		  and time-advanced backward {SPDE}s},
-  booktitle	= {Stochastic analysis and applications to finance},
-  series	= {Interdiscip. Math. Sci.},
-  volume	= {13},
-  pages		= {355--383},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2012},
-  mrclass	= {49K45 (60G51 60H15 60H30 60J75)},
-  mrnumber	= {2986854},
-  mrreviewer	= {David T. B. Kelly},
-  doi		= {10.1142/9789814383585\_0018},
-  url		= {https://doi.org/10.1142/9789814383585_0018}
-}
-
-@Article{	  .sulem.ea:14:singular,
-  author	= {\O ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
-  title		= {Singular control and optimal stopping of {SPDE}s, and
-		  backward {SPDE}s with reflection},
-  journal	= {Math. Oper. Res.},
-  fjournal	= {Mathematics of Operations Research},
-  volume	= {39},
-  year		= {2014},
-  number	= {2},
-  pages		= {464--486},
-  issn		= {0364-765X},
-  mrclass	= {60H15 (35R60 60G40 93E20)},
-  mrnumber	= {3205556},
-  mrreviewer	= {Vivek S. Borkar},
-  doi		= {10.1287/moor.2013.0602},
-  url		= {https://doi.org/10.1287/moor.2013.0602}
-}
-
-@InCollection{	  .sulem.ea:15:comparison,
-  author	= {\O ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
-  title		= {A comparison theorem for backward {SPDE}s with jumps},
-  booktitle	= {Festschrift {M}asatoshi {F}ukushima},
-  series	= {Interdiscip. Math. Sci.},
-  volume	= {17},
-  pages		= {479--487},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2015},
-  mrclass	= {60H15 (35B51 35R60 60J75)},
-  mrnumber	= {3379354},
-  mrreviewer	= {Kai He},
-  doi		= {10.1142/9789814596534\_0023},
-  url		= {https://doi.org/10.1142/9789814596534_0023}
-}
-
-@InCollection{	  .sulem.ea:16:stochastic,
-  author	= {\O ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
-  title		= {A stochastic {HJB} equation for optimal control of
-		  forward-backwards {SDE}s},
-  booktitle	= {The fascination of probability, statistics and their
-		  applications},
-  pages		= {435--446},
-  publisher	= {Springer, Cham},
-  year		= {2016},
-  mrclass	= {60H10 (49K45 49L25 91G10 93E20)},
-  mrnumber	= {3495696},
-  mrreviewer	= {Alexandre Popier}
-}
-
-@Article{	  .zhang:07:ito-ventzell,
-  author	= {\O{}ksendal, Bernt and Zhang, Tusheng},
-  title		= {The {I}t\^{o}-{V}entzell formula and forward stochastic
-		  differential equations driven by {P}oisson random measures},
-  journal	= {Osaka J. Math.},
-  fjournal	= {Osaka Journal of Mathematics},
-  volume	= {44},
-  year		= {2007},
-  number	= {1},
-  pages		= {207--230},
-  issn		= {0030-6126},
-  mrclass	= {60H40 (60G51 60G57 60H07)},
-  mrnumber	= {2313037},
-  mrreviewer	= {Klaus Meer},
-  url		= {http://projecteuclid.org/euclid.ojm/1174324333}
-}
-
-@Article{	  .zhang:10:optimal,
-  author	= {\O ksendal, Bernt and Zhang, Tusheng},
-  title		= {Optimal control with partial information for stochastic
-		  {V}olterra equations},
-  journal	= {Int. J. Stoch. Anal.},
-  fjournal	= {International Journal of Stochastic Analysis},
-  year		= {2010},
-  pages		= {Art. ID 329185, 25},
-  issn		= {2090-3332},
-  mrclass	= {93E20 (49K45 49N10 60H07 60H20)},
-  mrnumber	= {2678923},
-  doi		= {10.1155/2010/329185},
-  url		= {https://doi.org/10.1155/2010/329185}
-}
-
-@Article{	  .zhang:12:backward,
-  author	= {\O ksendal, Bernt and Zhang, Tusheng},
-  title		= {Backward stochastic differential equations with respect to
-		  general filtrations and applications to insider finance},
-  journal	= {Commun. Stoch. Anal.},
-  fjournal	= {Communications on Stochastic Analysis},
-  volume	= {6},
-  year		= {2012},
-  number	= {4},
-  pages		= {703--722},
-  mrclass	= {60H10 (35R60 60H30 65C30 91G80 93E20)},
-  mrnumber	= {3034013},
-  mrreviewer	= {Juan Li},
-  doi		= {10.31390/cosa.6.4.13},
-  url		= {https://doi.org/10.31390/cosa.6.4.13}
-}
 
 @Book{		  aaronson:97:introduction,
   author	= {Aaronson, Jon},
@@ -6403,7 +6251,7 @@
 }
 
 @Article{	  biagini.hu.ea:02:stochastic,
-  author	= {Biagini, Francesca and Hu, Yaozhong and \O ksendal, Bernt
+  author	= {Biagini, Francesca and Hu, Yaozhong and {\O}ksendal, Bernt
 		  and Sulem, Agn\`es},
   title		= {A stochastic maximum principle for processes driven by
 		  fractional {B}rownian motion},
@@ -6421,7 +6269,7 @@
 }
 
 @Book{		  biagini.hu.ea:08:stochastic,
-  author	= {Biagini, Francesca and Hu, Yaozhong and \O ksendal, Bernt
+  author	= {Biagini, Francesca and Hu, Yaozhong and {\O}ksendal, Bernt
 		  and Zhang, Tusheng},
   title		= {Stochastic calculus for fractional {B}rownian motion and
 		  applications},
@@ -6439,7 +6287,7 @@
 
 @Article{	  biagini.hu.ea:12:insider,
   author	= {Biagini, Francesca and Hu, Yaozhong and Meyer-Brandis,
-		  Thilo and \O ksendal, Bernt},
+		  Thilo and {\O}ksendal, Bernt},
   title		= {Insider trading equilibrium in a market with memory},
   journal	= {Math. Financ. Econ.},
   fjournal	= {Mathematics and Financial Economics},
@@ -29939,40 +29787,6 @@
   url		= {https://doi.org/10.1214/08-AAP526}
 }
 
-@Book{		  holden..ea:10:stochastic,
-  author	= {Holden, Helge and \O ksendal, Bernt and Ub\o e, Jan and
-		  Zhang, Tusheng},
-  title		= {Stochastic partial differential equations},
-  series	= {Universitext},
-  edition	= {Second},
-  note		= {A modeling, white noise functional approach},
-  publisher	= {Springer, New York},
-  year		= {2010},
-  pages		= {xvi+305},
-  isbn		= {978-0-387-89487-4},
-  mrclass	= {60H15 (60H10 60H40)},
-  mrnumber	= {2571742},
-  doi		= {10.1007/978-0-387-89488-1},
-  url		= {https://doi.org/10.1007/978-0-387-89488-1}
-}
-
-@Book{		  holden..ea:96:stochastic,
-  author	= {Holden, Helge and \O ksendal, Bernt and Ub\o e, Jan and
-		  Zhang, Tusheng},
-  title		= {Stochastic partial differential equations},
-  series	= {Probability and its Applications},
-  note		= {A modeling, white noise functional approach},
-  publisher	= {Birkh\"{a}user Boston, Inc., Boston, MA},
-  year		= {1996},
-  pages		= {x+231},
-  isbn		= {0-8176-3928-4},
-  mrclass	= {60H15 (35R60 46N30 60G20 60H10)},
-  mrnumber	= {1408433},
-  mrreviewer	= {Isamu D\^{o}ku},
-  doi		= {10.1007/978-1-4684-9215-6},
-  url		= {https://doi.org/10.1007/978-1-4684-9215-6}
-}
-
 @Article{	  holden.hu:96:finite,
   author	= {Holden, Helge and Hu, Yaozhong},
   title		= {Finite difference approximation of the pressure equation
@@ -29990,6 +29804,40 @@
   mrreviewer	= {Krystyna Twardowska},
   doi		= {10.1080/03605309608821231},
   url		= {https://doi.org/10.1080/03605309608821231}
+}
+
+@Book{		  holden.oksendal.ea:10:stochastic,
+  author	= {Holden, Helge and {\O}ksendal, Bernt and Ub\o e, Jan and
+		  Zhang, Tusheng},
+  title		= {Stochastic partial differential equations},
+  series	= {Universitext},
+  edition	= {Second},
+  note		= {A modeling, white noise functional approach},
+  publisher	= {Springer, New York},
+  year		= {2010},
+  pages		= {xvi+305},
+  isbn		= {978-0-387-89487-4},
+  mrclass	= {60H15 (60H10 60H40)},
+  mrnumber	= {2571742},
+  doi		= {10.1007/978-0-387-89488-1},
+  url		= {https://doi.org/10.1007/978-0-387-89488-1}
+}
+
+@Book{		  holden.oksendal.ea:96:stochastic,
+  author	= {Holden, Helge and {\O}ksendal, Bernt and Ub\o e, Jan and
+		  Zhang, Tusheng},
+  title		= {Stochastic partial differential equations},
+  series	= {Probability and its Applications},
+  note		= {A modeling, white noise functional approach},
+  publisher	= {Birkh\"{a}user Boston, Inc., Boston, MA},
+  year		= {1996},
+  pages		= {x+231},
+  isbn		= {0-8176-3928-4},
+  mrclass	= {60H15 (35R60 46N30 60G20 60H10)},
+  mrnumber	= {1408433},
+  mrreviewer	= {Isamu D\^{o}ku},
+  doi		= {10.1007/978-1-4684-9215-6},
+  url		= {https://doi.org/10.1007/978-1-4684-9215-6}
 }
 
 @InCollection{	  hollander.konig.ea:21:parabolic,
@@ -30279,264 +30127,6 @@
   mrreviewer	= {Maria Gordina},
   doi		= {10.1016/j.jfa.2009.05.017},
   url		= {https://doi.org/10.1016/j.jfa.2009.05.017}
-}
-
-@InCollection{	  hu..ea:00:optimal,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt and Sulem, Agn\`es},
-  title		= {Optimal portfolio in a fractional {B}lack {$\&$} {S}choles
-		  market},
-  booktitle	= {Mathematical physics and stochastic analysis ({L}isbon,
-		  1998)},
-  pages		= {267--279},
-  publisher	= {World Sci. Publ., River Edge, NJ},
-  year		= {2000},
-  mrclass	= {60H10 (91B28)},
-  mrnumber	= {1893112}
-}
-
-@InCollection{	  hu..ea:00:stochastic,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt and Zhang, Tusheng},
-  title		= {Stochastic partial differential equations driven by
-		  multiparameter fractional white noise},
-  booktitle	= {Stochastic processes, physics and geometry: new
-		  interplays, {II} ({L}eipzig, 1999)},
-  series	= {CMS Conf. Proc.},
-  volume	= {29},
-  pages		= {327--337},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {2000},
-  mrclass	= {60H40},
-  mrnumber	= {1803426},
-  mrreviewer	= {Ali S\"{u}leyman \"{U}st\"{u}nel},
-  doi		= {10.1081/pde-120028841},
-  url		= {https://doi.org/10.1081/pde-120028841}
-}
-
-@InCollection{	  hu..ea:01:stochastic,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt and Zhang, Tusheng},
-  title		= {Stochastic fractional potential theory},
-  booktitle	= {Papers on analysis},
-  series	= {Rep. Univ. Jyv\"{a}skyl\"{a} Dep. Math. Stat.},
-  volume	= {83},
-  pages		= {169--180},
-  publisher	= {Univ. Jyv\"{a}skyl\"{a}, Jyv\"{a}skyl\"{a}},
-  year		= {2001},
-  mrclass	= {31C45 (60H05 60H40)},
-  mrnumber	= {1886621},
-  mrreviewer	= {Wilhelm Stannat}
-}
-
-@Article{	  hu..ea:03:optimal,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt and Sulem, Agn\`es},
-  title		= {Optimal consumption and portfolio in a {B}lack-{S}choles
-		  market driven by fractional {B}rownian motion},
-  journal	= {Infin. Dimens. Anal. Quantum Probab. Relat. Top.},
-  fjournal	= {Infinite Dimensional Analysis, Quantum Probability and
-		  Related Topics},
-  volume	= {6},
-  year		= {2003},
-  number	= {4},
-  pages		= {519--536},
-  issn		= {0219-0257},
-  mrclass	= {91B28 (60G15 60H05)},
-  mrnumber	= {2030208},
-  mrreviewer	= {Ludger Overbeck},
-  doi		= {10.1142/S0219025703001432},
-  url		= {https://doi.org/10.1142/S0219025703001432}
-}
-
-@Article{	  hu..ea:04:general,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt and Zhang, Tusheng},
-  title		= {General fractional multiparameter white noise theory and
-		  stochastic partial differential equations},
-  journal	= {Comm. Partial Differential Equations},
-  fjournal	= {Communications in Partial Differential Equations},
-  volume	= {29},
-  year		= {2004},
-  number	= {1-2},
-  pages		= {1--23},
-  issn		= {0360-5302},
-  mrclass	= {60H40 (35R60 60H15)},
-  mrnumber	= {2038141},
-  mrreviewer	= {Andrzej Kozlowski},
-  doi		= {10.1081/PDE-120028841},
-  url		= {https://doi.org/10.1081/PDE-120028841}
-}
-
-@Article{	  hu..ea:05:weighted,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt and Salopek, Donna
-		  Mary},
-  title		= {Weighted local time for fractional {B}rownian motion and
-		  applications to finance},
-  journal	= {Stoch. Anal. Appl.},
-  fjournal	= {Stochastic Analysis and Applications},
-  volume	= {23},
-  year		= {2005},
-  number	= {1},
-  pages		= {15--30},
-  issn		= {0736-2994},
-  mrclass	= {60H05 (60G15 60H30 91B28)},
-  mrnumber	= {2123941},
-  mrreviewer	= {Nicolas Privault},
-  doi		= {10.1081/SAP-200044412},
-  url		= {https://doi.org/10.1081/SAP-200044412}
-}
-
-@Article{	  hu..ea:17:singular,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt and Sulem, Agn\`es},
-  title		= {Singular mean-field control games},
-  journal	= {Stoch. Anal. Appl.},
-  fjournal	= {Stochastic Analysis and Applications},
-  volume	= {35},
-  year		= {2017},
-  number	= {5},
-  pages		= {823--851},
-  issn		= {0736-2994},
-  mrclass	= {91A15 (91A23 91B38 91B55 91B70 93E20)},
-  mrnumber	= {3686471},
-  mrreviewer	= {Vivek S. Borkar},
-  doi		= {10.1080/07362994.2017.1325745},
-  url		= {https://doi.org/10.1080/07362994.2017.1325745}
-}
-
-@Article{	  hu.:02:chaos,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Chaos expansion of local time of fractional {B}rownian
-		  motions},
-  journal	= {Stochastic Anal. Appl.},
-  fjournal	= {Stochastic Analysis and Applications},
-  volume	= {20},
-  year		= {2002},
-  number	= {4},
-  pages		= {815--837},
-  issn		= {0736-2994},
-  mrclass	= {60G15 (60G17 60H05 60H40)},
-  mrnumber	= {1921068},
-  mrreviewer	= {Vladimir I. Bogachev},
-  doi		= {10.1081/SAP-120006109},
-  url		= {https://doi.org/10.1081/SAP-120006109}
-}
-
-@Article{	  hu.:03:fractional,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Fractional white noise calculus and applications to
-		  finance},
-  journal	= {Infin. Dimens. Anal. Quantum Probab. Relat. Top.},
-  fjournal	= {Infinite Dimensional Analysis, Quantum Probability and
-		  Related Topics},
-  volume	= {6},
-  year		= {2003},
-  number	= {1},
-  pages		= {1--32},
-  issn		= {0219-0257},
-  mrclass	= {60H40 (60G15 60H05 91B28)},
-  mrnumber	= {1976868},
-  mrreviewer	= {Isamu D\^{o}ku},
-  doi		= {10.1142/S0219025703001110},
-  url		= {https://doi.org/10.1142/S0219025703001110}
-}
-
-@Article{	  hu.:07:optimal,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Optimal smooth portfolio selection for an insider},
-  journal	= {J. Appl. Probab.},
-  fjournal	= {Journal of Applied Probability},
-  volume	= {44},
-  year		= {2007},
-  number	= {3},
-  pages		= {742--752},
-  issn		= {0021-9002},
-  mrclass	= {60H30 (60H10 91B28)},
-  mrnumber	= {2355589},
-  mrreviewer	= {Josef Teichmann},
-  doi		= {10.1239/jap/1189717542},
-  url		= {https://doi.org/10.1239/jap/1189717542}
-}
-
-@InCollection{	  hu.:08:optimal,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Optimal stopping with advanced information flow: selected
-		  examples},
-  booktitle	= {Advances in mathematics of finance},
-  series	= {Banach Center Publ.},
-  volume	= {83},
-  pages		= {107--116},
-  publisher	= {Polish Acad. Sci. Inst. Math., Warsaw},
-  year		= {2008},
-  mrclass	= {60G40 (60H05 60H07 60J65 91G20)},
-  mrnumber	= {2509229},
-  mrreviewer	= {Barthel W. Huff},
-  doi		= {10.4064/bc83-0-7},
-  url		= {https://doi.org/10.4064/bc83-0-7}
-}
-
-@Article{	  hu.:08:partial,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Partial information linear quadratic control for jump
-		  diffusions},
-  journal	= {SIAM J. Control Optim.},
-  fjournal	= {SIAM Journal on Control and Optimization},
-  volume	= {47},
-  year		= {2008},
-  number	= {4},
-  pages		= {1744--1761},
-  issn		= {0363-0129},
-  mrclass	= {93E20 (60G51 60H05 60J75 91B28)},
-  mrnumber	= {2421328},
-  mrreviewer	= {Christian Bender},
-  doi		= {10.1137/060667566},
-  url		= {https://doi.org/10.1137/060667566}
-}
-
-@Article{	  hu.:19:linear,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Linear {V}olterra backward stochastic integral equations},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {129},
-  year		= {2019},
-  number	= {2},
-  pages		= {626--633},
-  issn		= {0304-4149},
-  mrclass	= {60H07 (45D05 45R05 60H20 60H30)},
-  mrnumber	= {3907012},
-  mrreviewer	= {Mark A. McKibben},
-  doi		= {10.1016/j.spa.2018.03.016},
-  url		= {https://doi.org/10.1016/j.spa.2018.03.016}
-}
-
-@InCollection{	  hu.:96:wick,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Wick approximation of quasilinear stochastic differential
-		  equations},
-  booktitle	= {Stochastic analysis and related topics, {V} ({S}ilivri,
-		  1994)},
-  series	= {Progr. Probab.},
-  volume	= {38},
-  pages		= {203--231},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {1996},
-  mrclass	= {60H10},
-  mrnumber	= {1396332},
-  mrreviewer	= {Ali S\"{u}leyman \"{U}st\"{u}nel}
-}
-
-@Article{	  hu.:98:optimal,
-  author	= {Hu, Yaozhong and \O ksendal, Bernt},
-  title		= {Optimal time to invest when the price processes are
-		  geometric {B}rownian motions},
-  journal	= {Finance Stoch.},
-  fjournal	= {Finance and Stochastics},
-  volume	= {2},
-  year		= {1998},
-  number	= {3},
-  pages		= {295--310},
-  issn		= {0949-2984},
-  mrclass	= {91B28 (60G40)},
-  mrnumber	= {1809523},
-  mrreviewer	= {Richard H. Stockbridge},
-  doi		= {10.1007/s007800050042},
-  url		= {https://doi.org/10.1007/s007800050042}
 }
 
 @Article{	  hu.huang.ea:14:on,
@@ -30881,8 +30471,8 @@
 }
 
 @InCollection{	  hu.lindstr-m.ea:95:inverse,
-  author	= {Hu, Yao Zhong and Lindstr\o m, Tom and \O ksendal, Bernt
-		  and Ub\o e, Jan and Zhang, Tu Sheng},
+  author	= {Hu, Yao Zhong and Lindstr\o m, Tom and {\O}ksendal, Bernt and
+		  Ub\o e, Jan and Zhang, Tu Sheng},
   title		= {Inverse powers of white noise},
   booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
   series	= {Proc. Sympos. Pure Math.},
@@ -31675,6 +31265,263 @@
   mrreviewer	= {Hong Yin},
   doi		= {10.1142/9789814383585\_0012},
   url		= {https://doi.org/10.1142/9789814383585_0012}
+}
+
+@InCollection{	  hu.oksendal.ea:00:optimal,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt and Sulem, Agn\`es},
+  title		= {Optimal portfolio in a fractional {B}lack {$\&$} {S}choles
+		  market},
+  booktitle	= {Mathematical physics and stochastic analysis ({L}isbon,
+		  1998)},
+  pages		= {267--279},
+  publisher	= {World Sci. Publ., River Edge, NJ},
+  year		= {2000},
+  mrclass	= {60H10 (91B28)},
+  mrnumber	= {1893112}
+}
+
+@InCollection{	  hu.oksendal.ea:00:stochastic,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt and Zhang, Tusheng},
+  title		= {Stochastic partial differential equations driven by
+		  multiparameter fractional white noise},
+  booktitle	= {Stochastic processes, physics and geometry: new
+		  interplays, {II} ({L}eipzig, 1999)},
+  series	= {CMS Conf. Proc.},
+  volume	= {29},
+  pages		= {327--337},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {2000},
+  mrclass	= {60H40},
+  mrnumber	= {1803426},
+  mrreviewer	= {Ali S\"{u}leyman \"{U}st\"{u}nel},
+  doi		= {10.1081/pde-120028841},
+  url		= {https://doi.org/10.1081/pde-120028841}
+}
+
+@InCollection{	  hu.oksendal.ea:01:stochastic,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt and Zhang, Tusheng},
+  title		= {Stochastic fractional potential theory},
+  booktitle	= {Papers on analysis},
+  series	= {Rep. Univ. Jyv\"{a}skyl\"{a} Dep. Math. Stat.},
+  volume	= {83},
+  pages		= {169--180},
+  publisher	= {Univ. Jyv\"{a}skyl\"{a}, Jyv\"{a}skyl\"{a}},
+  year		= {2001},
+  mrclass	= {31C45 (60H05 60H40)},
+  mrnumber	= {1886621},
+  mrreviewer	= {Wilhelm Stannat}
+}
+
+@Article{	  hu.oksendal.ea:03:optimal,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt and Sulem, Agn\`es},
+  title		= {Optimal consumption and portfolio in a {B}lack-{S}choles
+		  market driven by fractional {B}rownian motion},
+  journal	= {Infin. Dimens. Anal. Quantum Probab. Relat. Top.},
+  fjournal	= {Infinite Dimensional Analysis, Quantum Probability and
+		  Related Topics},
+  volume	= {6},
+  year		= {2003},
+  number	= {4},
+  pages		= {519--536},
+  issn		= {0219-0257},
+  mrclass	= {91B28 (60G15 60H05)},
+  mrnumber	= {2030208},
+  mrreviewer	= {Ludger Overbeck},
+  doi		= {10.1142/S0219025703001432},
+  url		= {https://doi.org/10.1142/S0219025703001432}
+}
+
+@Article{	  hu.oksendal.ea:04:general,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt and Zhang, Tusheng},
+  title		= {General fractional multiparameter white noise theory and
+		  stochastic partial differential equations},
+  journal	= {Comm. Partial Differential Equations},
+  fjournal	= {Communications in Partial Differential Equations},
+  volume	= {29},
+  year		= {2004},
+  number	= {1-2},
+  pages		= {1--23},
+  issn		= {0360-5302},
+  mrclass	= {60H40 (35R60 60H15)},
+  mrnumber	= {2038141},
+  mrreviewer	= {Andrzej Kozlowski},
+  doi		= {10.1081/PDE-120028841},
+  url		= {https://doi.org/10.1081/PDE-120028841}
+}
+
+@Article{	  hu.oksendal.ea:05:weighted,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt and Salopek, Donna Mary},
+  title		= {Weighted local time for fractional {B}rownian motion and
+		  applications to finance},
+  journal	= {Stoch. Anal. Appl.},
+  fjournal	= {Stochastic Analysis and Applications},
+  volume	= {23},
+  year		= {2005},
+  number	= {1},
+  pages		= {15--30},
+  issn		= {0736-2994},
+  mrclass	= {60H05 (60G15 60H30 91B28)},
+  mrnumber	= {2123941},
+  mrreviewer	= {Nicolas Privault},
+  doi		= {10.1081/SAP-200044412},
+  url		= {https://doi.org/10.1081/SAP-200044412}
+}
+
+@Article{	  hu.oksendal.ea:17:singular,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt and Sulem, Agn\`es},
+  title		= {Singular mean-field control games},
+  journal	= {Stoch. Anal. Appl.},
+  fjournal	= {Stochastic Analysis and Applications},
+  volume	= {35},
+  year		= {2017},
+  number	= {5},
+  pages		= {823--851},
+  issn		= {0736-2994},
+  mrclass	= {91A15 (91A23 91B38 91B55 91B70 93E20)},
+  mrnumber	= {3686471},
+  mrreviewer	= {Vivek S. Borkar},
+  doi		= {10.1080/07362994.2017.1325745},
+  url		= {https://doi.org/10.1080/07362994.2017.1325745}
+}
+
+@Article{	  hu.oksendal:02:chaos,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Chaos expansion of local time of fractional {B}rownian
+		  motions},
+  journal	= {Stochastic Anal. Appl.},
+  fjournal	= {Stochastic Analysis and Applications},
+  volume	= {20},
+  year		= {2002},
+  number	= {4},
+  pages		= {815--837},
+  issn		= {0736-2994},
+  mrclass	= {60G15 (60G17 60H05 60H40)},
+  mrnumber	= {1921068},
+  mrreviewer	= {Vladimir I. Bogachev},
+  doi		= {10.1081/SAP-120006109},
+  url		= {https://doi.org/10.1081/SAP-120006109}
+}
+
+@Article{	  hu.oksendal:03:fractional,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Fractional white noise calculus and applications to
+		  finance},
+  journal	= {Infin. Dimens. Anal. Quantum Probab. Relat. Top.},
+  fjournal	= {Infinite Dimensional Analysis, Quantum Probability and
+		  Related Topics},
+  volume	= {6},
+  year		= {2003},
+  number	= {1},
+  pages		= {1--32},
+  issn		= {0219-0257},
+  mrclass	= {60H40 (60G15 60H05 91B28)},
+  mrnumber	= {1976868},
+  mrreviewer	= {Isamu D\^{o}ku},
+  doi		= {10.1142/S0219025703001110},
+  url		= {https://doi.org/10.1142/S0219025703001110}
+}
+
+@Article{	  hu.oksendal:07:optimal,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Optimal smooth portfolio selection for an insider},
+  journal	= {J. Appl. Probab.},
+  fjournal	= {Journal of Applied Probability},
+  volume	= {44},
+  year		= {2007},
+  number	= {3},
+  pages		= {742--752},
+  issn		= {0021-9002},
+  mrclass	= {60H30 (60H10 91B28)},
+  mrnumber	= {2355589},
+  mrreviewer	= {Josef Teichmann},
+  doi		= {10.1239/jap/1189717542},
+  url		= {https://doi.org/10.1239/jap/1189717542}
+}
+
+@InCollection{	  hu.oksendal:08:optimal,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Optimal stopping with advanced information flow: selected
+		  examples},
+  booktitle	= {Advances in mathematics of finance},
+  series	= {Banach Center Publ.},
+  volume	= {83},
+  pages		= {107--116},
+  publisher	= {Polish Acad. Sci. Inst. Math., Warsaw},
+  year		= {2008},
+  mrclass	= {60G40 (60H05 60H07 60J65 91G20)},
+  mrnumber	= {2509229},
+  mrreviewer	= {Barthel W. Huff},
+  doi		= {10.4064/bc83-0-7},
+  url		= {https://doi.org/10.4064/bc83-0-7}
+}
+
+@Article{	  hu.oksendal:08:partial,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Partial information linear quadratic control for jump
+		  diffusions},
+  journal	= {SIAM J. Control Optim.},
+  fjournal	= {SIAM Journal on Control and Optimization},
+  volume	= {47},
+  year		= {2008},
+  number	= {4},
+  pages		= {1744--1761},
+  issn		= {0363-0129},
+  mrclass	= {93E20 (60G51 60H05 60J75 91B28)},
+  mrnumber	= {2421328},
+  mrreviewer	= {Christian Bender},
+  doi		= {10.1137/060667566},
+  url		= {https://doi.org/10.1137/060667566}
+}
+
+@Article{	  hu.oksendal:19:linear,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Linear {V}olterra backward stochastic integral equations},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {129},
+  year		= {2019},
+  number	= {2},
+  pages		= {626--633},
+  issn		= {0304-4149},
+  mrclass	= {60H07 (45D05 45R05 60H20 60H30)},
+  mrnumber	= {3907012},
+  mrreviewer	= {Mark A. McKibben},
+  doi		= {10.1016/j.spa.2018.03.016},
+  url		= {https://doi.org/10.1016/j.spa.2018.03.016}
+}
+
+@InCollection{	  hu.oksendal:96:wick,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Wick approximation of quasilinear stochastic differential
+		  equations},
+  booktitle	= {Stochastic analysis and related topics, {V} ({S}ilivri,
+		  1994)},
+  series	= {Progr. Probab.},
+  volume	= {38},
+  pages		= {203--231},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {1996},
+  mrclass	= {60H10},
+  mrnumber	= {1396332},
+  mrreviewer	= {Ali S\"{u}leyman \"{U}st\"{u}nel}
+}
+
+@Article{	  hu.oksendal:98:optimal,
+  author	= {Hu, Yaozhong and {\O}ksendal, Bernt},
+  title		= {Optimal time to invest when the price processes are
+		  geometric {B}rownian motions},
+  journal	= {Finance Stoch.},
+  fjournal	= {Finance and Stochastics},
+  volume	= {2},
+  year		= {1998},
+  number	= {3},
+  pages		= {295--310},
+  issn		= {0949-2984},
+  mrclass	= {91B28 (60G40)},
+  mrnumber	= {1809523},
+  mrreviewer	= {Richard H. Stockbridge},
+  doi		= {10.1007/s007800050042},
+  url		= {https://doi.org/10.1007/s007800050042}
 }
 
 @Article{	  hu.peng:09:backward,
@@ -44371,6 +44218,24 @@
 
 @Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion in bounded domains in
+		  {$\mathbb{R}^n$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {6},
+  pages		= {905--916},
+  issn		= {0304-4149},
+  mrclass	= {60J65},
+  mrnumber	= {2254664},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/j.spa.2005.10.007},
+  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
+}
+
+@Article{	  nane:06:iterated*2,
+  author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
   fjournal	= {Potential Analysis. An International Journal Devoted to
@@ -44386,24 +44251,6 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
-}
-
-@Article{	  nane:06:iterated*2,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in bounded domains in
-		  {$\mathbb{R}^n$}},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {116},
-  year		= {2006},
-  number	= {6},
-  pages		= {905--916},
-  issn		= {0304-4149},
-  mrclass	= {60J65},
-  mrnumber	= {2254664},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1016/j.spa.2005.10.007},
-  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
 @Article{	  nane:06:laws,
@@ -48635,6 +48482,158 @@
   mrreviewer	= {Gilberto Bini},
   doi		= {10.1155/S1073792802110099},
   url		= {https://doi.org/10.1155/S1073792802110099}
+}
+
+@Article{	  oksendal.proske.ea:05:backward,
+  author	= {{\O}ksendal, Bernt and Proske, Frank and Zhang, Tusheng},
+  title		= {Backward stochastic partial differential equations with
+		  jumps and application to optimal control of random jump
+		  fields},
+  journal	= {Stochastics},
+  fjournal	= {Stochastics. An International Journal of Probability and
+		  Stochastic Processes},
+  volume	= {77},
+  year		= {2005},
+  number	= {5},
+  pages		= {381--399},
+  issn		= {1744-2508},
+  mrclass	= {60H15 (35R60 93E20)},
+  mrnumber	= {2178424},
+  mrreviewer	= {Krystyna Twardowska},
+  doi		= {10.1080/17442500500213797},
+  url		= {https://doi.org/10.1080/17442500500213797}
+}
+
+@Article{	  oksendal.sulem.ea:11:optimal,
+  author	= {{\O}ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
+  title		= {Optimal control of stochastic delay equations and
+		  time-advanced backward stochastic differential equations},
+  journal	= {Adv. in Appl. Probab.},
+  fjournal	= {Advances in Applied Probability},
+  volume	= {43},
+  year		= {2011},
+  number	= {2},
+  pages		= {572--596},
+  issn		= {0001-8678},
+  mrclass	= {49K45 (35R60 60H10 60H15 60J75 91G80)},
+  mrnumber	= {2848391},
+  mrreviewer	= {Giorgio Fabbri},
+  doi		= {10.1239/aap/1308662493},
+  url		= {https://doi.org/10.1239/aap/1308662493}
+}
+
+@InCollection{	  oksendal.sulem.ea:12:optimal,
+  author	= {{\O}ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
+  title		= {Optimal partial information control of {SPDE}s with delay
+		  and time-advanced backward {SPDE}s},
+  booktitle	= {Stochastic analysis and applications to finance},
+  series	= {Interdiscip. Math. Sci.},
+  volume	= {13},
+  pages		= {355--383},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2012},
+  mrclass	= {49K45 (60G51 60H15 60H30 60J75)},
+  mrnumber	= {2986854},
+  mrreviewer	= {David T. B. Kelly},
+  doi		= {10.1142/9789814383585\_0018},
+  url		= {https://doi.org/10.1142/9789814383585_0018}
+}
+
+@Article{	  oksendal.sulem.ea:14:singular,
+  author	= {{\O}ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
+  title		= {Singular control and optimal stopping of {SPDE}s, and
+		  backward {SPDE}s with reflection},
+  journal	= {Math. Oper. Res.},
+  fjournal	= {Mathematics of Operations Research},
+  volume	= {39},
+  year		= {2014},
+  number	= {2},
+  pages		= {464--486},
+  issn		= {0364-765X},
+  mrclass	= {60H15 (35R60 60G40 93E20)},
+  mrnumber	= {3205556},
+  mrreviewer	= {Vivek S. Borkar},
+  doi		= {10.1287/moor.2013.0602},
+  url		= {https://doi.org/10.1287/moor.2013.0602}
+}
+
+@InCollection{	  oksendal.sulem.ea:15:comparison,
+  author	= {{\O}ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
+  title		= {A comparison theorem for backward {SPDE}s with jumps},
+  booktitle	= {Festschrift {M}asatoshi {F}ukushima},
+  series	= {Interdiscip. Math. Sci.},
+  volume	= {17},
+  pages		= {479--487},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2015},
+  mrclass	= {60H15 (35B51 35R60 60J75)},
+  mrnumber	= {3379354},
+  mrreviewer	= {Kai He},
+  doi		= {10.1142/9789814596534\_0023},
+  url		= {https://doi.org/10.1142/9789814596534_0023}
+}
+
+@InCollection{	  oksendal.sulem.ea:16:stochastic,
+  author	= {{\O}ksendal, Bernt and Sulem, Agn\`es and Zhang, Tusheng},
+  title		= {A stochastic {HJB} equation for optimal control of
+		  forward-backwards {SDE}s},
+  booktitle	= {The fascination of probability, statistics and their
+		  applications},
+  pages		= {435--446},
+  publisher	= {Springer, Cham},
+  year		= {2016},
+  mrclass	= {60H10 (49K45 49L25 91G10 93E20)},
+  mrnumber	= {3495696},
+  mrreviewer	= {Alexandre Popier}
+}
+
+@Article{	  oksendal.zhang:07:ito-ventzell,
+  author	= {{\O}ksendal, Bernt and Zhang, Tusheng},
+  title		= {The {I}t\^{o}-{V}entzell formula and forward stochastic
+		  differential equations driven by {P}oisson random measures},
+  journal	= {Osaka J. Math.},
+  fjournal	= {Osaka Journal of Mathematics},
+  volume	= {44},
+  year		= {2007},
+  number	= {1},
+  pages		= {207--230},
+  issn		= {0030-6126},
+  mrclass	= {60H40 (60G51 60G57 60H07)},
+  mrnumber	= {2313037},
+  mrreviewer	= {Klaus Meer},
+  url		= {http://projecteuclid.org/euclid.ojm/1174324333}
+}
+
+@Article{	  oksendal.zhang:10:optimal,
+  author	= {{\O}ksendal, Bernt and Zhang, Tusheng},
+  title		= {Optimal control with partial information for stochastic
+		  {V}olterra equations},
+  journal	= {Int. J. Stoch. Anal.},
+  fjournal	= {International Journal of Stochastic Analysis},
+  year		= {2010},
+  pages		= {Art. ID 329185, 25},
+  issn		= {2090-3332},
+  mrclass	= {93E20 (49K45 49N10 60H07 60H20)},
+  mrnumber	= {2678923},
+  doi		= {10.1155/2010/329185},
+  url		= {https://doi.org/10.1155/2010/329185}
+}
+
+@Article{	  oksendal.zhang:12:backward,
+  author	= {{\O}ksendal, Bernt and Zhang, Tusheng},
+  title		= {Backward stochastic differential equations with respect to
+		  general filtrations and applications to insider finance},
+  journal	= {Commun. Stoch. Anal.},
+  fjournal	= {Communications on Stochastic Analysis},
+  volume	= {6},
+  year		= {2012},
+  number	= {4},
+  pages		= {703--722},
+  mrclass	= {60H10 (35R60 60H30 65C30 91G80 93E20)},
+  mrnumber	= {3034013},
+  mrreviewer	= {Juan Li},
+  doi		= {10.31390/cosa.6.4.13},
+  url		= {https://doi.org/10.31390/cosa.6.4.13}
 }
 
 @InCollection{	  olde-daalhuis:10:confluent,
